--- a/src/css/index.less
+++ b/src/css/index.less
@@ -9,3 +9,10 @@ ul {
     font-size: 12px;
   }
 }
+
+#box {
+  width: 380px;
+  height: 114px;
+  background-color: red;
+  background: url('../images/JD.jpg');
+}
